@@ -3,6 +3,7 @@ v0.5.1
 * fixed new/edit transaction gui
   * fixed Meta tab in entry edit not functioning correctly
   * removed t+ notation
+* added LDate formatting options
 
 v0.5.0
 * minor bug fixes and optimizations
